--- a/src/components/NavList.astro
+++ b/src/components/NavList.astro
@@ -4,13 +4,21 @@
 
 <ul>
     <li>
-        <a href="/">Accueil</a>
+        <a href="/">ACCUEIL</a>
     </li>
     <li>
-        <a href="/projects">Projets</a>
+        <a href="/osteopathie">OSTÉOPATHIE</a>
     </li>
     <li>
-        <a href="/contact">Contact</a>
+        <a href="/leCabinet">LE CABINET</a>
+    </li>
+    <li>
+        <a href="/contact">CONTACT</a>
+    </li>
+    <li>
+        <a href="/reandezVous">
+            <button>RENDEZ-VOUS</button>
+        </a>
     </li>
 </ul>
 
@@ -21,12 +29,12 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-end;
         list-style-type: none;
         gap: 2rem;
         margin: 2rem 2rem;
         padding: 0;
-        @media (max-width: 659px){
+        @media (max-width: 950px){
             display: flex;
             flex-direction: column;
             justify-content: center;
