--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,10 +20,11 @@ const { title, description } = Astro.props;
         <title>{title}</title>
     </head>
     <body>
+		<section class="container">
         <MobileHeader />
 		<SideBar />
 
-        
+		</section>
         <footer>
             <div class="link_footer">
                 <p>© Pierre TOURNEUX -<span id="date"></span></p>
@@ -56,3 +57,8 @@ const { title, description } = Astro.props;
 </html>
 
 <!--Mobile First -->
+
+<style lang="scss">
+
+	
+</style>
