--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,6 +16,11 @@ const { title, description } = Astro.props;
         <meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
+		<!--Google font K2D -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=K2D:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+		
 		<meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
@@ -59,6 +64,16 @@ const { title, description } = Astro.props;
 <!--Mobile First -->
 
 <style lang="scss">
+	//Déclaration des variables couleur
+	$Orange: #CF6326;
+	//container
+	html{
+		width: 100vw;
+	}
+	.container{
+		margin-right: 4.6%;
+		margin-left: 4.6%;
+	}
 
 	
 </style>
