--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import Header from "../components/Header.astro";
 ---
 
 <BaseLayout title="accueil" description="#">
-	
+	<Header title="Cabinet d'ostéopathe" description="de Pierre TOURNEUX"></Header>
+    
 </BaseLayout>
 
 <style lang="scss">
-
+    
 </style>
