--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,53 @@
 ---
 interface Props {
   title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <section class="container_portfolio">
     <div class="text_portfolio">
         <h1 id="title">{title}</h1>
+        <h2 id="description">{description}</h2>
     </div>
 </section>
 
+<style lang="scss">
+  section{
+    width: 100%;
+    height: 300px;
+    background-image: url(../../public/imgHeader.png);
+    @media (max-width: 660px) {
+      height: 265px;
+    }
+    div{
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: rgba( 52, 78, 76, 70%);
+      h1{
+       color: #fff;
+       font-family: 'K2D', sans-serif;
+       font-size: 56px;
+       font-weight: bold;
+       margin: 0;
+       @media (max-width: 660px) {
+        font-size: 32px;
+       }
+      }
+      h2{
+        color: #fff;
+        font-family: 'K2D', sans-serif;
+        font-size: 32px;
+        margin: 0;
+        font-weight: 600;
+      }
+    }
+    
+  }
+</style>
