--- a/src/components/NavList.astro
+++ b/src/components/NavList.astro
@@ -59,7 +59,7 @@ import Logo from "./Logo.astro"
             align-items: center;
             list-style-type: none;
             gap: 2rem;
-            margin: 2rem 2rem;
+            margin: 2rem 0rem 2rem 2rem;
             padding: 0;
             @media (max-width: 960px){
                 display: flex;
