--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -200,6 +200,7 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 	}
 	p{
 		font-family: 'K2D', sans-serif;
+		font-weight: 200;
 	}
 		.container{
 		margin-right: 4.6%;
