--- a/src/components/NavList.astro
+++ b/src/components/NavList.astro
@@ -32,14 +32,14 @@ import Logo from "./Logo.astro"
 <!--descktop vers mobile -->
 <style lang="scss">
     $shadow: #030305;
-    //NavBar
+    /*NavBar */
     .containerNavbar{
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
         
-        //Logo navlist
+        /*Logo navlist*/
         .logoNavList{
             width: 70px;
             height: 70px;
@@ -52,7 +52,7 @@ import Logo from "./Logo.astro"
                 }
             }
         }
-        //NavList
+        /*NavList*/
         ul{
             display: flex;
             flex-direction: row;
