--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -68,6 +68,9 @@ const { title, description } = Astro.props;
 	//Déclaration des variables couleur
 	$Orange: #CF6326;
 	//container
+	body{
+		margin: 0px;
+	}
 	.container{
 		margin-right: 4.6%;
 		margin-left: 4.6%;
