vos practiciens section

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -68,6 +68,9 @@ const { title, description } = Astro.props;
 	//Déclaration des variables couleur
 	$Orange: #CF6326;
 	//container
+	html{
+		max-width:100%
+	}
 	body{
 		margin: 0px;
 	}
