--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,8 +17,8 @@ const { title, description } = Astro.props;
 <style lang="scss">
   section{
     width: 100%;
-    max-width: 1550px;
-    height: 300px;
+    max-width: 100%;
+    height: 350px;
     background-image: url(../../public/imgHeader.png);
     background-repeat: no-repeat;
     background-size: cover;
