--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,25 +96,34 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 			<h2>Vos Practiciens</h2>
 			<div class="containerCardPracticiens">
 				<div class="containerCardPracticiens1">
-					<a href="">
 						<div class="blocBlurCard">
-
+							<h3> Gennifer DEMEY</h3>
+							<p>Emensis itaque difficultatibus multis et nive obrutis callibus plurimis 
+							ubi prope Rauracum ventum est ad supercilia flumini</p>
+							<a href="#">
+								<ButtonFilled3 title="EN SAVOIRS PLUS"></ButtonFilled3>
+							</a>
 						</div>
-					</a>	
 				</div>	
 				<div class="containerCardPracticiens1">
-					<a href="">
 						<div class="blocBlurCard">
-
+							<h3>Valentin PUYO</h3>
+							<p>Emensis itaque difficultatibus multis et nive obrutis callibus plurimis 
+							ubi prope Rauracum ventum est ad supercilia flumini</p>
+							<a href="#">
+								<ButtonFilled3 title="EN SAVOIRS PLUS"></ButtonFilled3>
+							</a>
 						</div>
-					</a>	
 				</div>	
 				<div class="containerCardPracticiens1">
-					<a href="">
 						<div class="blocBlurCard">
-
+							<h3>Melinda NOËL</h3>
+							<p>Emensis itaque difficultatibus multis et nive obrutis callibus plurimis 
+							ubi prope Rauracum ventum est ad supercilia flumini</p>
+							<a href="#">
+								<ButtonFilled3 title="EN SAVOIRS PLUS"></ButtonFilled3>
+							</a>
 						</div>
-					</a>	
 				</div>	
 			</div>
 		</section>
@@ -162,8 +171,10 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 	}
 	h3{
 		font-family: 'K2D', sans-serif;
-		font-size: 32px;
 		margin: 0;
+		@media (min-width: 780px) {
+			font-size: 32px;
+		}
 	}
 	p{
 		font-family: 'K2D', sans-serif;
@@ -261,11 +272,27 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 				border-radius: 4px;
 			}
 			.blocBlurCard{
+				display: flex;
+				flex-direction: column;
+				justify-content: start;
+				align-items:flex-start;
 				width: 315px;
 				height: 225px;
 				background: rgb(52, 78, 76, .60);
 				backdrop-filter: blur(6px);
 				border-radius: 0 0 4px 4px;
+				h3{
+					margin: 8px 12px;
+					color: #fff;
+				}
+				p{
+					margin: 8px 12px;
+					text-align: start;
+					color: #fff;
+				}
+				a{
+					margin: 0px 12px;
+				}
 			}
 		}
 	}
