section vos practiciens

--- a/src/components/ButtonFilled3.astro
+++ b/src/components/ButtonFilled3.astro
@@ -1,11 +1,7 @@
 ---
-interface Props {
-    title: string;
-}
 
-const { title } = Astro.props;
 ---
-<button>{title}</button>
+<button>EN SAVOIRS PLUS</button>
 
 <style lang="scss">
 button{
