--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 					</div>
 					<div>
 						<a href="#">
-							<ButtonFilled title="RENDEZ-VOUS"></ButtonFilled>
+							<ButtonFilled></ButtonFilled>
 						</a>
 					</div>
 				</div>
@@ -80,7 +80,7 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 					<!-- Bouton de la card -->
 					<div>
 						<a href="#">
-							<ButtonFilled3 title="EN SAVOIRS PLUS"></ButtonFilled3>
+							<ButtonFilled3></ButtonFilled3>
 						</a>	
 					</div>
 				</div>
@@ -101,7 +101,7 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 							<p>Emensis itaque difficultatibus multis et nive obrutis callibus plurimis 
 							ubi prope Rauracum ventum est ad supercilia flumini</p>
 							<a href="#">
-								<ButtonFilled3 title="EN SAVOIRS PLUS"></ButtonFilled3>
+								<ButtonFilled3></ButtonFilled3>
 							</a>
 						</div>
 				</div>	
@@ -111,7 +111,7 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 							<p>Emensis itaque difficultatibus multis et nive obrutis callibus plurimis 
 							ubi prope Rauracum ventum est ad supercilia flumini</p>
 							<a href="#">
-								<ButtonFilled3 title="EN SAVOIRS PLUS"></ButtonFilled3>
+								<ButtonFilled3></ButtonFilled3>
 							</a>
 						</div>
 				</div>	
@@ -121,10 +121,19 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 							<p>Emensis itaque difficultatibus multis et nive obrutis callibus plurimis 
 							ubi prope Rauracum ventum est ad supercilia flumini</p>
 							<a href="#">
-								<ButtonFilled3 title="EN SAVOIRS PLUS"></ButtonFilled3>
+								<ButtonFilled3></ButtonFilled3>
 							</a>
 						</div>
 				</div>	
+			</div>
+			<div class="infoPracticiens">
+				<div>
+					<p>Les consultations se font sur rendez-vous. Vos Ostéopathes assurent aussi les urgences.</p>
+					<p>Le cabinet et le secrétariat sont ouverts du lundi au vendredi de 8h à 20h00 ainsi que le samedi de 8h à 19h.</p>
+				</div>	
+				<a href="#">
+					<ButtonFilled></ButtonFilled>
+				</a>
 			</div>
 		</section>
 
@@ -144,7 +153,7 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 			</div>
 			<div>
 				<a href="#">
-					<ButtonFilled3 title="EN SAVOIRS PLUS"></ButtonFilled3>
+					<ButtonFilled3></ButtonFilled3>
 				</a>
 			</div>
 		</section>
@@ -293,6 +302,12 @@ import ButtonFilled3 from "../components/ButtonFilled3.astro";
 				a{
 					margin: 0px 12px;
 				}
+			}
+		}
+		.infoPracticiens{
+			div{
+				padding-top: 32px;
+				padding-bottom: 16px;
 			}
 		}
 	}
