--- a/src/components/ButtonFilled.astro
+++ b/src/components/ButtonFilled.astro
@@ -1,12 +1,9 @@
 ---
-interface Props {
-    title: string;
-}
 
-const { title } = Astro.props;
+
 ---
 
-<button>{title}</button>
+<button>RENDEZ-VOUS</button>
 
 <style lang="scss">
     $Orange: #CF6326;
