--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -69,7 +69,8 @@ const { title, description } = Astro.props;
 	$Orange: #CF6326;
 	//container
 	html{
-		max-width:100%
+		position: relative;
+		max-width:100%;
 	}
 	body{
 		margin: 0px;
